# PD_max

./: .env.example  .env.server.example  .gitignore  1.txt  DATABASE_ANALYSIS_REPORT.md  Dockerfile  PD_MAX_迭代开发文档.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
app/: config.py  database.py  logging_config.py  main.py  paths.py  price_tax_utils.py  quote_price_sources.py
docs/: api.md  docker.md  后端接口文档.md  品类接口文档.md
scripts/: diagnose_rule_check.sh  import_partner_warehouses_excel.py  migrate_ai_feedback_review_state.py  preload_ai_assets.py  prepare_forensic_v4_rois.py  purge_inactive_smelters_once.py  seed_test_prediction_data.py  test_doubao_prediction.py  test_prediction.py  train_forensic_v4.py
tests/: test_ai_detection_bbox_overlap.py  test_ai_detection_dataset_manager.py  test_ai_detection_feedback_manager.py  test_ai_detection_history_filename.py  test_ai_detection_inference_api.py  test_ai_detection_pixel_overlap.py  test_ai_detection_rule_check_history.py  test_ai_detection_rule_check_roi.py  test_ai_detection_rule_check_service.py  test_ai_detection_semantic_checker.py  test_ai_detection_task_recovery.py  test_ai_detection_timestamp_checker.py  test_ai_detection_train_pipeline.py  test_category_purge.py  test_comparison_recovery_price.py  test_comprehensive_history_analysis.py  test_comprehensive_prediction.py  test_confirm_price_table_aliases.py  test_confirm_price_table_per_row_date.py  test_daily_prediction_cache.py  test_dimension_options_warehouse_merge.py  (+13 more)
(+207 files in other folders)
