[project]
name = "pd-max"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi",
	"uvicorn",
	"pymysql",
	"python-dotenv",
	"pydantic",
	"python-multipart",
	"cryptography",
	"bcrypt",
	"python-jose[cryptography]",
	"openai",
	"opencv-python-headless",
	"torch",
	"torchvision",
	"easyocr",
	"numpy",
	"faiss-cpu",
	"xgboost",
	"joblib",
	"PyYAML",
	"Pillow",
	"openpyxl>=3.1.0",
	"sqlalchemy[asyncio]>=2.0",
	"aiomysql",
	"redis",
	"aiohttp",
	"celery",
	"pandas",
	"apscheduler",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
